2014-08-25 Andrew Burgess <andrew.burgess@embecosm.com>
	Highlighting of the current entry in the *Kill Ring* buffer now
	works with manual point movement rather than just with the
	`browse-kill-ring-forward' function.  Also moving the point with
	the mouse will also update the highlighting correctly now.

2014-08-20 Andrew Burgess <andrew.burgess@embecosm.com>
	Added variable `browse-kill-ring-highlight-inserted-item-style'
	which selects the style to use when highlighting the inserted kill
	ring item.  The choices are `solid' (the old style, solid face for
	0.5 seconds) and `pulse' (which uses the pulse library from cedet,
	included with recent versions of emacs, to fade the highlighting
	out over 0.5 seconds).  The default is `pulse' but this will fall
	back to `solid' if the pulse library is not available.

2014-08-18 Andrew Burgess <andrew.burgess@embecosm.com>
	(browse-kill-ring-setup) Don't access
	browse-kill-ring-preview-overlay, or use
	browse-kill-ring-preview-update when preview is turned off.

2014-08-11 Bozhidar Batsov <bozhidar@batsov.com>

	Update package URL.
	Drop legacy xemacs code.
	Remove some redundant legacy code.
	Convert the readme to markdown and improve it.
	Simplify a bit of code.

2014-08-07 Andrew Burgess <andrew.burgess@embecosm.com>

	Handle case where kill-ring-yank-pointer is nil (empty kill ring).

2014-01-04 Toon Claes <toon@tonotdo.com>

	Use Semantic Versioning (www.semver.org) from now.

	Move ChangeLog to seperate file.

2013-11-17 skyer9 <skyer9 at gmail dot com>

	Works with `delete-selection-mode'.

	Modify `save-and-restore' option when exit.
	If Emacs version is 24+, browse-kill-ring works with `query-replace' properly.

	Works with kill-ring-yank-pointer.
	When kill is yanked by browse-kill-ring,
	browse-kill-ring remembers cursor position.

	Add `browse-kill-ring-display-leftmost-duplicate' variable.
	When `browse-kill-ring-display-duplicates' is nil,
	leftmost(last) duplicate will be displayed.

	Some bug fix.
